--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<div class="overlay"></div>
+<div class="sky">
+    <div class="sun" id="sun"></div>
+    <div class="hill"></div>
+</div>
 
 <div class="container">
     <h1 id="text">
@@ -20,8 +22,6 @@
 
     <button id="btn" onclick="nextScene()">What happened next?</button>
 </div>
-
-<audio id="heartbeat" src="https://www.soundjay.com/human/heartbeat-01a.mp3"></audio>
 
 <script src="script.js"></script>
 </body>
