--- a/index.html
+++ b/index.html
@@ -2,27 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Our Sunrise</title>
+    <title>Sunrise Kiss</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div class="sky">
+        <div class="sun" id="sun"></div>
+        <div class="hill"></div>
+    </div>
 
-<div class="sky">
-    <div class="sun" id="sun"></div>
-    <div class="hill"></div>
-</div>
+    <div class="container">
+        <h1 id="text">
+            You remember that morning?<br><br>
+            When I was a little broken…<br>
+            And you brought me to the hills to fix me.
+        </h1>
 
-<div class="container">
-    <h1 id="text">
-        You remember that morning?<br><br>
-        When I was a little broken…<br>
-        And you brought me to the hills to fix me.
-    </h1>
+        <button id="btn" onclick="nextScene()">What happened next?</button>
+    </div>
 
-    <button id="btn" onclick="nextScene()">What happened next?</button>
-</div>
-
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
